RIA-5739 fix Key names in Personalisation SMS and split notification generator email and sms